<resources>
    <string name="app_name">Learning Story</string>
    <string name="message_main_page">Welcome, this is the main page that displays story items</string>
    <string name="logout">Logout</string>
    <string name="title_landing_page">Welcome to Learning Story</string>
    <string name="message_landing_page">Information about stories of learning programming from various sources who have been successful</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_email">The email does not match the format</string>
    <string name="invalid_password">The password must have at least 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_login_page">Log in to your account</string>
    <string name="desc_login_page">Enter your email and password to access your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="title_signup_page">Create a new account</string>
    <string name="image_login_page">Image of login page</string>
    <string name="image_register_page">Image of registration page</string>
    <string name="image_story">Image Story</string>
    <string name="button_back">Back Button</string>
    <string name="setting">Setting</string>
    <string name="try_again">Try again</string>
    <string name="no_data">No data</string>
    <string name="there_is_an_error">There is an error</string>
    <string name="try_again_in_a_few_moment">Please try again in a few moments</string>
    <string name="no_connection">No internet connection</string>
    <string name="please_check_connection">Please check your internet connection</string>
    <string name="created_at">Created at %s</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">description</string>
    <string name="empty_image_warning">No image. Please enter an image first.</string>
    <string name="create_story">Create Story</string>
    <string name="no_media_selected">No media selected</string>
    <string name="detail_story">Detail Story</string>
    <string name="map">Map</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="use_your_location">Use your location</string>
</resources>