<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.landing.LandingActivity">

    <ImageView
        android:id="@+id/iv_landing"
        android:layout_width="@dimen/dp0"
        android:layout_height="@dimen/dp0"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_landing" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp32"
        android:layout_marginTop="@dimen/dp8"
        android:alpha="0"
        android:text="@string/title_landing_page"
        android:textColor="@color/sky_blue"
        android:textSize="@dimen/sp20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
        tools:alpha="100" />

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp32"
        android:layout_marginTop="@dimen/dp8"
        android:alpha="0"
        android:text="@string/message_landing_page"
        android:textColor="@color/black"
        android:textSize="@dimen/sp14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        tools:alpha="100" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp32"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp16"
        android:alpha="0"
        android:backgroundTint="@color/sky_blue"
        android:text="@string/login"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        tools:alpha="100" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp32"
        android:layout_marginEnd="@dimen/dp32"
        android:alpha="0"
        android:backgroundTint="@color/sky_blue"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        tools:alpha="100" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp64"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp64"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>