<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.login.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="@dimen/dp0"
                android:layout_height="@dimen/dp0"
                android:layout_marginHorizontal="@dimen/dp32"
                android:contentDescription="@string/image_login_page"
                app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2"
                app:srcCompat="@drawable/img_login" />

            <TextView
                android:id="@+id/tv_title_login_page"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp32"
                android:layout_marginTop="@dimen/dp16"
                android:alpha="0"
                android:text="@string/title_login_page"
                android:textColor="@color/black"
                android:textSize="@dimen/sp20"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal"
                tools:alpha="100" />

            <TextView
                android:id="@+id/tv_desc_login_page"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp32"
                android:alpha="0"
                android:text="@string/desc_login_page"
                android:textColor="@color/black"
                android:textSize="@dimen/sp16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_login_page"
                tools:alpha="100" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp32"
                android:layout_marginTop="@dimen/dp24"
                android:alpha="0"
                android:text="@string/email"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_desc_login_page"
                tools:alpha="100" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_email_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp32"
                android:alpha="0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_email"
                app:startIconDrawable="@drawable/ic_email_24"
                app:startIconTint="@color/sky_blue"
                tools:alpha="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dp32"
                android:layout_marginTop="@dimen/dp8"
                android:alpha="0"
                android:text="@string/password"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_email_layout"
                tools:alpha="100" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_password_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp32"
                android:alpha="0"
                app:endIconMode="password_toggle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_password"
                app:startIconDrawable="@drawable/ic_lock_24"
                app:startIconTint="@color/sky_blue"
                tools:alpha="100">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login_page"
                android:layout_width="@dimen/dp0"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp32"
                android:layout_marginTop="@dimen/dp32"
                android:alpha="0"
                android:backgroundTint="@color/sky_blue"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_password_layout"
                tools:alpha="100" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp64"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.4"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHorizontal2"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp64"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_percent="0.1"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include
        android:id="@+id/layout_loading"
        layout="@layout/layout_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>