<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_create_story"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar_create_story"
            layout="@layout/layout_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar_create_story">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_preview"
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_margin="8dp"
                    android:scaleType="fitCenter"
                    app:layout_constraintBottom_toTopOf="@+id/btn_camera"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_placeholder"
                    tools:src="@drawable/ic_placeholder" />

                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="@color/sky_blue"
                    android:text="@string/camera"
                    app:layout_constraintBottom_toTopOf="@+id/et_description_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btn_gallery" />

                <Button
                    android:id="@+id/btn_gallery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:backgroundTint="@color/sky_blue"
                    android:elevation="2dp"
                    android:scaleType="fitCenter"
                    android:text="@string/gallery"
                    app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
                    app:layout_constraintEnd_toStartOf="@+id/btn_camera"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/btn_camera" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/et_description_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/description"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toTopOf="@id/btn_upload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btn_gallery">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ed_add_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:minHeight="120dp"
                        android:ems="10"
                        android:inputType="text|textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btn_upload"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="32dp"
                    android:layout_marginVertical="8dp"
                    android:backgroundTint="@color/sky_blue"
                    android:text="@string/upload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_description_layout"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <include
            android:id="@+id/layout_loading"
            app:layout_constraintTop_toBottomOf="@id/toolbar_create_story"
            layout="@layout/layout_loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>